--- a/package.json
+++ b/package.json
@@ -8,7 +8,14 @@
       "android"
     ]
   },
-
+   "repository": {
+    "type": "git",
+    "url": "git+https://github.com/weid2014/VoiceToMsg.git"
+  },
+  "keywords": [
+    "ecosystem:cordova",
+    "cordova-android"
+  ],
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
